name:           statistics
version:        0.14.0.2
synopsis:       A library of statistical types, data, and functions
description:
  This library provides a number of common functions and types useful
  in statistics.  We focus on high performance, numerical robustness,
  and use of good algorithms.  Where possible, we provide
  references to the statistical literature.
  .
  The library's facilities can be divided into four broad categories:
  .
  * Working with widely used discrete and continuous probability
    distributions.  (There are dozens of exotic distributions in use;
    we focus on the most common.)
  .
  * Computing with sample data: quantile estimation, kernel density
    estimation, histograms, bootstrap methods, significance testing,
    and regression and autocorrelation analysis.
  .
  * Random variate generation under several different distributions.
  .
  * Common statistical tests for significant differences between
    samples.

license:        BSD2
license-file:   LICENSE
homepage:       https://github.com/bos/statistics
bug-reports:    https://github.com/bos/statistics/issues
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2009-2014 Bryan O'Sullivan
category:       Math, Statistics
build-type:     Simple
cabal-version:  >= 1.8
extra-source-files:
  README.markdown
  benchmark/bench.hs
  changelog.md
  examples/kde/KDE.hs
  examples/kde/data/faithful.csv
  examples/kde/kde.html
  examples/kde/kde.tpl
  tests/Tests/Math/Tables.hs
  tests/Tests/Math/gen.py
  tests/utils/Makefile
  tests/utils/fftw.c
tested-with: GHC==7.6.3, GHC==7.8.3, GHC==7.10.3, GHC==8.0.1
  
library
  exposed-modules:
    Statistics.Autocorrelation
    Statistics.ConfidenceInt
    Statistics.Correlation
    Statistics.Correlation.Kendall
    Statistics.Distribution
    Statistics.Distribution.Beta
    Statistics.Distribution.Binomial
    Statistics.Distribution.CauchyLorentz
    Statistics.Distribution.ChiSquared
    Statistics.Distribution.DiscreteUniform
    Statistics.Distribution.Exponential
    Statistics.Distribution.FDistribution
    Statistics.Distribution.Gamma
    Statistics.Distribution.Geometric
    Statistics.Distribution.Hypergeometric
    Statistics.Distribution.Laplace
    Statistics.Distribution.Normal
    Statistics.Distribution.Poisson
    Statistics.Distribution.StudentT
    Statistics.Distribution.Transform
    Statistics.Distribution.Uniform
    Statistics.Function
    Statistics.Math.RootFinding
    Statistics.Matrix
    Statistics.Matrix.Algorithms
    Statistics.Matrix.Mutable
    Statistics.Matrix.Types
    Statistics.Quantile
    Statistics.Regression
    Statistics.Resampling
    Statistics.Resampling.Bootstrap
    Statistics.Sample
    Statistics.Sample.Histogram
    Statistics.Sample.KernelDensity
    Statistics.Sample.KernelDensity.Simple
    Statistics.Sample.Powers
    Statistics.Test.ChiSquared
    Statistics.Test.KolmogorovSmirnov
    Statistics.Test.KruskalWallis
    Statistics.Test.MannWhitneyU
--    Statistics.Test.Runs
    Statistics.Test.StudentT
    Statistics.Test.Types
    Statistics.Test.WilcoxonT
    Statistics.Transform
    Statistics.Types
  other-modules:
    Statistics.Distribution.Poisson.Internal
    Statistics.Function.Comparison
    Statistics.Internal
    Statistics.Sample.Internal
    Statistics.Test.Internal
    Statistics.Types.Internal
  build-depends:
    aeson >= 0.6.0.0,
    base >= 4.5 && < 5,
    base-orphans >= 0.6 && <0.7,
    binary >= 0.5.1.0,
    deepseq >= 1.1.0.2,
    erf,
    math-functions    >= 0.1.7,
    monad-par         >= 0.3.4,
    mwc-random        >= 0.13.0.0,
    primitive         >= 0.3,
    vector            >= 0.10,
    vector-algorithms >= 0.4,
    vector-th-unbox,
    vector-binary-instances >= 0.2.1
  if impl(ghc < 7.6)
    build-depends:
      ghc-prim

  -- gather extensive profiling data for now
  ghc-prof-options: -auto-all

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        tests.hs
  other-modules:
    Tests.ApproxEq
    Tests.Correlation
    Tests.Distribution
    Tests.Function
    Tests.Helpers
    Tests.KDE
    Tests.Matrix
    Tests.Matrix.Types
    Tests.NonParametric
    Tests.NonParametric.Table
    Tests.Orphanage
    Tests.Parametric
    Tests.Serialization
    Tests.Transform

  ghc-options:
    -Wall -threaded -rtsopts -fsimpl-tick-factor=500

  build-depends:
    HUnit,
    QuickCheck >= 2.7.5,
    base,
    binary,
    erf,
    aeson,
    ieee754 >= 0.7.3,
    math-functions,
    mwc-random,
    primitive,
    statistics,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    vector,
    vector-algorithms

source-repository head
  type:     git
  location: https://github.com/bos/statistics

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/statistics
